--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	</head>
 	<link rel="stylesheet" href="styles.css">
 	<body>
+		<nav>
+		
+		</nav>
 		<header>
 			<h1>Random Quote Generator</h1>
 		</header>
